<resources>
    <string name="app_name">Kid Localiza</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nombre">Name</string>
    <string name="btnPrueba">Test</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="titulo">Distance alert</string>
    <string name="correolastmonkey">the.last.monkey@lastmonkey.com</string>
    <string name="enviarubicacion">Send location</string>
    <string name="compartir">Share</string>
    <string name="ajustes">Settings</string>
    <string name="distanciaaproximada">Approximate distance</string>
    <string name="buscando">Scanning</string>
    <string name="vibracion">Vibration: </string>
    <string name="title_activity_data__kid">Data Kid</string>
    <string name="datospreferencias">Preference data</string>
    <string name="zonasegura">Security zone</string>
    <string name="guardar">Save</string>
</resources>
